NEWS - OpenPrinting CUPS Filters v1.9.0 - 2016-06-09
----------------------------------------------------

CHANGES IN V1.10.0

	- rastertops: Added new filter to turn PWG Raster into
	  PostScript, in preparation for MuPDF support. Thanks to
	  Pranjal Bhor for contributing this as part of his Google
	  Summer of Code project.
	- gstoraster, gstopxl, gstopdf, pstopdf: Integrated
	  functionality of script-based filters pstopdf and gstopxl
	  into gstoraster filter as script-based filters cannot access
	  the print queue's PPD file with current CUPS due to change
	  of PPD file permissions.  To make gstoraster always produce
	  the correct output format (CUPS/PWG Raster, PDF, PCL-XL) it
	  is called via new wrapper scripts (gstopdf, gstopxl) which
	  set an environment variable telling the format. The old
	  filter scripts got removed.
	- imagetops, texttops: Do not use $0 in the wrapper scripts,
	  when CUPS calls filters, it passes the queue name as $0, not
	  path and name of the called filter.
	- cups-browsed: When creating local queues for discovered IPP
	  network printers always create PPD files and if the
	  information supplied by the printer via IPP is insufficient
	  use information from the DNS-SD entry or default values
	  suitable for most printers. Use System V interface scripts
	  only on explicit request in cups-browsed.conf. This change
	  is to address the fact that System V interface script
	  support is removed from CUPS 2.2.x and later for security
	  reasons.
	- pstopdf: Make the filter only get installed if Ghostscript is
	  present and also moved its conversion rules into the
	  cupsfilters-ghostscript.convs file.
	- cups-browsed: Fixed crash when trying to get debugg logging
	  both to the terminal and into a file.
	- libcupsfilters: Fixed crash of pdftoraster when the color
	  space is an RGB space (3 colors) with 1 bit color
	  depth. Here we need to add one bit to the pixels (to get 4