@@ -3,7 +3,6 @@ Michael Sweet, Apple (msweet@apple.com)
 Koji Otani, BBR Inc. (sho@bbr.jp)
 Tobias Hoffmann (th55@gmx.de)
 Lars Übernickel, Canonical (lars@uebernic.de)
-Robert Sander (robert.sander@epigenomics.com)
 Tim Waugh (twaugh@redhat.com)
 Tomáš Chvátal (tomas.chvatal@gmail.com)
 Franz Pförtsch (Franz.Pfoertsch@brose.com)
