@@ -10,7 +10,6 @@ Copyright: 1993-2007 Easy Software Products
  2006-2012 BBR Inc.
  2008-2016 Till Kamppeter
  2008,2012 Tobias Hoffmann
- 2003 Robert Sander
  2003-2006 Red Hat, Inc.
  2003-2006 Tim Waugh
  2012 Franz Pförtsch
@@ -118,18 +117,14 @@ Files: filter/getline.c
 Copyright: 1993, 1996-2014, Free Software Foundation, Inc
 License: GPL-2+
 
-Files: filter/gstopxl.in
-Copyright: 2001-2005, Easy Software Products
-License: GPL-2+
-
-Files: filter/gstopxl* ppd/pxlcolor.ppd ppd/pxlmono.ppd
+Files: ppd/pxlcolor.ppd ppd/pxlmono.ppd
 Copyright: 2001-2005 Easy Software Products
 License: GPL-2+
 
 Files: filter/gstoraster.c
 Copyright: 2011-2013, Richard Hughes
   2011, Tim Waugh
-  2008-2013, Till Kamppeter
+  2008-2016, Till Kamppeter
 License: Expat
 
 Files: filter/imagetopdf*
@@ -171,11 +166,6 @@ Files: filter/pdfutils.c
 Copyright: 2008, Tobias Hoffmann
 License: GPL-2
 
-Files: filter/pstopdf
-Copyright: 2008-2012, Till Kamppeter <till.kamppeter@gmail.com>
-  2003, Robert Sander <robert.sander@epigenomics.com>
-License: GPL-2
-
 Files: filter/rastertopdf.cpp
 Copyright: 2010, Neil 'Superna' Armstrong <superna9999@gmail.com>
  2012 Tobias Hoffmann <smilingthax@gmail.com>
@@ -199,15 +189,11 @@ Copyright: 2011-2013, Till Kamppeter
   1997-2006, Easy Software Products
 License: GPL-2
 
-Files: filter/textonly
-Copyright: 2003-2006, Tim Waugh <twaugh@redhat.com>
-  2003-2006, Red Hat, Inc
-License: GPL-2+
-
-Files: filter/textonly* ppd/textonly.ppd
-Copyright: 2003-2006 Red Hat, Inc.
- 2003-2006 Tim Waugh <twaugh@redhat.com>
-License: GPL-2+
+Files: filter/texttotext.c
+Copyright: 2011-2013, Till Kamppeter
+  2007-2011, Apple Inc
+  1997-2006, Easy Software Products
+License: GPL-2
 
 Files: filter/texttopdf.c
  charset/*
@@ -218,7 +204,7 @@ Copyright: 2008, 2012, Tobias Hoffmann
   1993-2007, Easy Software Products
 License: GPL-2
 
-Files: filter/texttops filter/imagetops
+Files: filter/texttops filter/imagetops filter/gstopxl filter/gstopdf
 Copyright: 2012 Till Kamppeter <till.kamppeter@gmail.com>
 License: GPL-2+
 
