@@ -3,6 +3,14 @@ NEWS - OpenPrinting CUPS Filters v1.9.0 - 2016-06-09
 
 CHANGES IN V1.10.0
 
+	- texttotext: Added new filter for text-only printers written
+	  in C, to use the CUPS library to access the print queue's
+	  PPD file, with a lot of options to fit practically all
+	  printer models amd paper sizes, support for CUPS' page
+	  management options, and support for configuring the print
+	  queue and controlling the options by the PPD file.
+	- textonly: Removed the old script-based filter for text-only
+	  printers.
 	- rastertops: Added new filter to turn PWG Raster into
 	  PostScript, in preparation for MuPDF support. Thanks to
 	  Pranjal Bhor for contributing this as part of his Google
